# storage_noodle

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.duvet/: config.toml  object_s3_config.toml  object_s3_snapshot.txt  snapshot.txt  sql_config.toml  sql_snapshot.txt
.duvet/reports/: report.html
.duvet/requirements/traits/spec/: create-trait.toml  delete-trait.toml  read-trait.toml  update-trait.toml
.github/workflows/: checks.yml  tests.yml  traceability.yml
example/: Cargo.toml
example/src/: main.rs
object/: Cargo.toml
object/src/: lib.rs
object_s3/: Cargo.toml
object_s3/src/: lib.rs
object_s3/tests/: integration_test.rs
object_s3/tests/utils/: mod.rs
sql/: Cargo.toml
sql/src/: lib.rs  schema.rs
sql/src/schema/: postgres.rs  sqlite.rs
sql/tests/: integration_test.rs
sql_derive/: Cargo.toml
sql_derive/src/: attr.rs  crud.rs  lib.rs  schema.rs  sql.rs  sql_backing.rs
traits/: Cargo.toml  build.rs  spec.md
traits/src/: lib.rs  sqlx.rs
