[workspace]
members = ["traits", "sql", "sql_derive"]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.89.0"
edition = "2024"

[workspace.dependencies]
sqlx = { version = "0.8.6" }
proc-macro2 = "1.0.101"

[workspace.lints.clippy]
std_instead_of_core = "forbid"
std_instead_of_alloc = "forbid"
alloc_instead_of_core = "forbid"
#missing_docs_in_private_items = "deny"

#[workspace.lints.rust]
#missing_docs = "deny"
