[workspace]
members = ["traits", "sql", "sql_derive", "object", "object_s3"]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.89.0"
edition = "2024"

[workspace.dependencies]
# sql
sqlx = { version = "0.8.6" }

# s3
minio = "0.3.0"
bytes = "1.10.1"

# numbers
rand = "0.10.0-rc.0"
base64 = "0.22.1"

# macro
proc-macro2 = "1.0.101"
syn = "2.0.106"
quote = "1.0.40"

# test deps
tokio = { version = "1.47.1" }
reqwest = "0.12.23"

# utils
itertools = "0.14.0"

# build deps
readme-rustdocifier = "0.1.1"

[workspace.lints.clippy]
std_instead_of_core = "forbid"
std_instead_of_alloc = "forbid"
alloc_instead_of_core = "forbid"
missing_docs_in_private_items = "forbid"
pedantic = "forbid"

[workspace.lints.rust]
missing_docs = "forbid"
