[package]
name = "storage_noodle_example"
rust-version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
storage_noodle_sql = { path = "../sql" }
storage_noodle_traits = { path = "../traits" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
