[package]
name = "storage_noodle_object_s3"
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
minio = { workspace = true }
storage_noodle_object = { path = "../object" }
storage_noodle_traits = { path = "../traits" }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true }

[lints]
workspace = true
