[package]
name = "storage_noodle_traits"
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
sqlx = { workspace = true, optional = true }

[build-dependencies]
readme-rustdocifier = { workspace = true }

[features]
# Implements sqlx traits for `AssocId`
"sqlx" = ["dep:sqlx"]

# Implements sqlx PgHasArrayType trait for `AssocId`
"sqlx_pg_array" = ["sqlx", "sqlx/postgres"]

[lints]
workspace = true
